--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,1 +1,7 @@
-/*# sourceMappingURL=styles.css.map */
+@import url("https://fonts.googleapis.com/css2?family=Public+Sans:ital,wght@0,100..900;1,100..900&display=swap");
+* {
+  margin: 0;
+  padding: 0;
+  text-decoration: none;
+  box-sizing: border-box;
+}/*# sourceMappingURL=styles.css.map */
