--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -7,3 +7,6 @@
 
 @import '../styles/variables.scss';
 @import '../styles/header.scss';
+@import '../styles/main.scss';
+@import '../styles/footer.scss';
+@import '../styles/responsivity.scss';
