--- a/styles/header.css
+++ b/styles/header.css
@@ -1,1 +1,88 @@
-@import url("https://fonts.googleapis.com/css2?family=Public+Sans:ital,wght@0,100..900;1,100..900&display=swap");/*# sourceMappingURL=header.css.map */
+@import url("https://fonts.googleapis.com/css2?family=Public+Sans:ital,wght@0,100..900;1,100..900&display=swap");
+header {
+  width: 100%;
+}
+header .navbar {
+  display: flex;
+  justify-content: space-around;
+  margin-top: 3dvh;
+  margin-bottom: 3dvh;
+}
+header .navbar .nav-list {
+  display: flex;
+  gap: 4dvh;
+}
+header .navbar .nav-list .nav-link {
+  list-style-type: none;
+}
+header .navbar .nav-list .nav-link a {
+  font-family: "Public Sans", serif;
+  font-size: 1rem;
+  color: hsl(233, 8%, 62%);
+  cursor: pointer;
+}
+header .navbar .nav-list .nav-link a:hover {
+  color: hsl(136, 65%, 51%);
+}
+header .navbar .nav-button {
+  display: flex;
+}
+header .navbar .nav-button .request-btn {
+  border: none;
+  border-radius: 4dvh;
+  width: 25dvh;
+  height: 7dvh;
+  cursor: pointer;
+  font-family: "Public Sans", serif;
+  font-size: 1rem;
+  color: hsl(220, 16%, 96%);
+  background: linear-gradient(90deg, hsl(136, 65%, 51%), hsl(192, 70%, 51%));
+}
+header .navbar .nav-button .request-btn:hover {
+  background-color: hsl(136, 65%, 51%);
+}
+header .banner-container {
+  display: flex;
+  background-color: hsl(220, 16%, 96%);
+}
+header .banner-container .banner-text {
+  display: flex;
+  flex-direction: column;
+  flex: 1;
+}
+header .banner-container .banner-text .main-title {
+  font-family: "Public Sans", serif;
+  font-size: 3.5rem;
+  margin-top: 25dvh;
+  margin-bottom: 10dvh;
+  text-align: center;
+  color: hsl(233, 26%, 24%);
+}
+header .banner-container .banner-text .banner-paragraph {
+  font-family: "Public Sans", serif;
+  font-size: 1.1rem;
+  text-align: center;
+  color: hsl(233, 8%, 62%);
+  margin-bottom: 8dvh;
+}
+header .banner-container .banner-text .banner-btn {
+  cursor: pointer;
+  border: none;
+  border-radius: 4dvh;
+  background: linear-gradient(90deg, hsl(136, 65%, 51%), hsl(192, 70%, 51%));
+  width: 25dvh;
+  height: 7dvh;
+  margin: 0 auto;
+  font-family: "Public Sans", serif;
+  font-size: 1rem;
+}
+header .banner-container .banner-img {
+  flex: 1;
+  background: url("../assets/bg-intro-desktop.svg");
+}
+header .banner-container .banner-img .banner-picture {
+  max-width: 100%;
+  height: auto;
+  position: relative;
+  top: 20dvh;
+}/*# sourceMappingURL=header.css.map */
